--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.9.0",
+    "razorpay": "^2.9.6",
     "ts-node": "^10.9.2",
     "twilio": "^5.7.0"
   }
